--- a/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatterns/DesignPatterns.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Adapter\Level0\" />
     <Folder Include="Singleton\Level1\" />
   </ItemGroup>
 
